0.0.2 (Pending)
* Update example in documentation to require 'rptman'

0.0.1 (June 26th, 2010)
* Initial Release